fixing footer on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -45,4 +45,7 @@ footer>section {
     #footer-content {
         flex-direction: column;
     }
+    footer {
+        padding: 6px;
+    }
 }
