--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,6 @@
 @import url("quote.css");
 @import url("images.css");
 
-/* * { border: 1px dotted black; } */
+/* * {
+    border: 1px dotted black;
+} */
